# Gears-Vk

./: .gitignore  CMakeLists.txt
cmake/: auto-vk.cmake  imgui.cmake
examples/compute_image_processing/source/: compute_image_processing.cpp
examples/hello_world/source/: hello_world.cpp
examples/model_loader/shaders/: diffuse_shading_fixed_lightsource.frag
examples/model_loader/source/: model_loader.cpp
framework/include/: camera.hpp  gvk.hpp  include.hpp  material_image_helpers.hpp  model.hpp  vk_convenience_functions.hpp  vk_format_convenience_functions.hpp
framework/src/: context_vulkan.cpp  imgui_manager.cpp  log.cpp  material_image_helpers.cpp  vk_convenience_functions.cpp  window_vulkan.cpp
